--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # System and server settings
 SYSTEM=food-order-online
 PORT=8080
+API_KEY=apitest
+COUPON_DIR=/app/coupons
 
 # MariaDB settings
 DB_USER=food_user
